dark mode fix para panel

--- a/style.css
+++ b/style.css
@@ -371,7 +371,7 @@ button#installButton {
 }
 
 .dark-mode .additional-info-panel.open {
-    background-color: #121212;
+    background-color: #242424;
 }
 
 .additional-info-panel p, .additional-info-panel h2, .additional-info-panel ul, .additional-info-panel li {
